--- a/aboutme.html
+++ b/aboutme.html
@@ -33,6 +33,7 @@
     <div class="jumbotron jumbotron-fluid hp-hero">
         <div class="container hero-container">
             <h1 class="h1-homebio">ABOUT ME</h1>
+            <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
                 <div class="col">
                     <img class="profileimage img-fluid" src="images/bea-google-cropped.jpg">
