--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,8 @@
     </header>
 </div>
 <div class="container  top-con">
-    <h1>Contact Bea</h1>
+    <h1 class="h1-homebio">Contact Bea</h1>
+    <img class="p-bar" src="images/gray-bar.png">
       <form class="row g-3 contact-bea">
         <div class="col-md-6">
             <label for="inputEmail4" class="form-label">Name</label>
