--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="container">
-        <img class="" src="images/cpr/hero-cpr-redesign.png">
+        <img lass="img-fluid"src="images/cpr/hero-cpr-redesign.png">
     </div>
 
 
@@ -86,7 +86,7 @@
         <p class="center-p">The Chicago Pet Rescue webiste was cluttered and in need of updating. The site needed to
             focus on adoption as
             their main goal and encourage more foot traffic.</p>
-        <img class="old" src="images/cpr/old-web-design.png">
+        <img class="img-fluid" src="images/cpr/old-web-design.png">
     </div>
 
 
@@ -104,11 +104,13 @@
 
     <div class="container center-p">
         <h4>THE SOLUTION</h4>
-        <p class="center-p">To create a streamlined and visually appealing site that clearly explains the adoption
-            process and is easier
-            to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to
-            enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the
-            original site composition and content integrity. </p>
+        <p class="center-p">To create a streamlined and visually appealing site that clearly explains the adoption process and is easier
+            to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity. </p>
+    </div>
+
+    <div class="container center-c">
+        <img class="big-cs-image" src="images/cpr/final-design-screens.png">
+
     </div>
 
     <div class="container">
@@ -124,14 +126,315 @@
                 <H4>Research Plan</H4>
                 <P>The research plan served as a base to set expectations and clear communication. We outlined the
                     research objectives, goals, methods, and logistical needed for the case study.</P>
-                <IMG class="cs-img"  SRC="images/cpr/research-plan.png">
+                <IMG class="cs-img" SRC="images/cpr/research-plan.png">
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="images/Empathize-01.png">
+        <h4 class="h4-div-bar">Empathizing with the User</h4>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>STORY LINE</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="IMAGES/cpr/story-line.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>USER PERSONA</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="IMAGES/cpr/user-persona.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>USER INTERVIEWS</H4>
+                <P>We conducted user interviews to identify the challenges that pet rescuers faced when navigating the
+                    site as well as potential solutions to alleviate these pain points.</P>
+                <IMG class="cs-img" SRC="images/cpr/interviews-1.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>AFFINITY DIAGRAM</H4>
+                <P>The interview data was organized into an Affinity Diagram which helped us sort and prioritize answers
+                    based on recurring themes and categories outlined by the team. </P>
+                <IMG class="cs-img" SRC="images/cpr/affinity-diagram.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Prioritization Matrix</H4>
+                <P>Using users insights as our starting point, we used a prioritization matrix to highlight the user’s
+                    most relevant needs and the goals of the project.</P>
+                <IMG class="cs-img" SRC="images/cpr/prioritization-matrix.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>PROJECT FOCUS</H4>
+                <P>The group then voted on answers we felt offered the greatest potential for viable solutions. Each
+                    insight inspired multiple ideas that the team was able to collectively review and run through. These
+                    acted as our navigational compass through design and feature decisions. </P>
+                <IMG class="cs-img" SRC="images/cpr/prioritization-matrix-close.png">
             </div>
         </div>
     </div>
 
     <div class="container-fluid div-bar">
-        <img class="number-ux-phase" src="images/Empathize-01.png"><h4>Empathizing with the User</h4>
+        <img class="number-ux-phase" src="images/Define-02.png">
+        <h4 class="h4-div-bar">DEFINING THE PROBLEM</h4>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Heauristics Evaluation</H4>
+                <P>We evaluated the site for its use of heuristics and UI practices and identified major weaknesses that
+                    needed to be addressed.</P>
+                <IMG class="cs-img" SRC="images/cpr/heuristics-eval.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Highlighted Problems</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/heuristics-eval-2.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Competitive Analysis</H4>
+                <P>We gathered content that was used to inspire and inform our solution and lead us to originality.</P>
+                <IMG class="cs-img" SRC="images/cpr/competitive-analysis.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Highlighted Ideas</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/competitive-analysis-2.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="images/Ideate-3.png">
+        <h4 class="h4-div-bar">IDEATION PHASE</h4>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Card sorting and Sitemaping </H4>
+                <P>We went through the process of card sorting to start giving form to our ideas and solutions. </P>
+                <IMG class="cs-img" SRC="IMAGES/cpr/sitemap.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>USER FLOW</H4>
+                <P>We mapped out the user experience to identify the users steps and
+                    determine the design requirements to meet the users needs.</P>
+                <IMG class="cs-img" SRC="images/cpr/user-flow.png">
+            </div>
+        </div>
+        <h4>Proposed changes based on user’s feedback and website evaluation:</h4>
+        <div class="row">
+            <div class="col-lg-6">
+                <ul>
+                    <li>Create a separate tab in the navigation for contact us</li>
+                    <li>Move Adoption buttons before Foster buttons</li>
+                    <li>Design a new/responsive hero image</li>
+                    <li>Add Step-by-step adoption process</li>
+                    <li>Add petfinder/filter feature (by Pet Type/Breed/Proximity)</li>
+                    <li>Organize/redesign pets scrollable section</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <ul>
+                    <li>Reduce overall website copy</li>
+                    <li>Add a proper footer button</li>
+                    <li>Redesign buttons with state interactions</li>
+                    <li>Update social media icons</li>
+                    <li>Reduce application form length and divide into separate pages with a progress bar</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="images/Prototype-4.png">
+        <h4 class="h4-div-bar">PROTOTYPING</h4>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Paper sketching</H4>
+                <P>With the initial concept in mind, we quickly generated sketches for
+                    possible solutions.</P>
+                <IMG class="cs-img" SRC="images/cpr/sketches.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Low-fidelity Wireframes</H4>
+                <P>The concept was translated into a few simple wireframes with a low-degree of complexity</P>
+                <IMG class="cs-img" SRC="images/cpr/cpr-low-fi-prototype.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container center-c">
+       <h4>Redesigning Brand Identity</h4>
+       <p>The new logo design was based on more comtemporary look of a combination of the three kind of animals from the original logo.</p>
+       <img class="big-cs-image" src="images/cpr/LOGO-DESIGN.png">
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>UI Style guide</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/Style Guide Chicago Pet Care.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>High-Fidelity Prototype</H4>
+                <P>A style guide was defined to apply an original brand style to more robust prototypes.</P>
+                <IMG class="cs-img" SRC="images/cpr/high-fi-prototype.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container center-c">
+        <h4 class="h4-div-bar">Clickable prototype with Reusable Components</h4>
+        <img class="big-cs-image" src="images/cpr/interactive-prototype.png">
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="images/5-Test.png">
+        <h4 class="h4-div-bar">Testing</h4>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Interview Data</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/interview-data.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Interview Comments</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/interviews-2.png">
+            </div>
+        </div>
+
+        <h4>User Suggested Changes</h4>
+        <div class="row">
+            <div class="col-lg-6">
+                <ul>
+                    <li>Next Step button(Bio) should lead to adoption form, not adoption process</li>
+                    <li>Show the number of animals available</li>
+                    <li>Add temperment section to bio card</li>
+                    <li>Add what pet you are intersted in to the adoption form</li>
+                    <li>Show more diversity in images for About page</li>
+                    <li>Add more spacing or larger text to About page</li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <ul>
+                    <li>Reviews page, bio, about shorten text legnth</li>
+                    <li>Add additional info on pets (backstory/training)</li>
+                    <li>Larger text on Adoption page or gets larger on hover</li>
+                    <li>Add trigger to scroll down on adoption page
+                        Thinner footer?</li>
+                    <li>Replace foster button with donate</li>
+                    <li>Put available animals in some sort of order</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="">
+        <h4 class="h4-div-bar">Iterations</h4>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Homepage Iterations</H4>
+                <P>Removed the reviews section from the homepage since many users expressed they normally don't read or
+                    trut them.</P>
+                <IMG class="cs-img" SRC="images/cpr/interation-1.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Pet Bio Page</H4>
+                <P>Added personalized information like Temperament into an clearly organized pet card for easy
+                    discoverability.</P>
+                <IMG class="cs-img" SRC="images/cpr/iteration-2.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="">
+        <h4 class="h4-div-bar">Successful Solutions</h4>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Old Long Adoption Application Form with 8 Scrolls</H4>
+                <P></P>
+                <IMG class="a-form-img" SRC="images/cpr/long-application.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>Simplified Form with Save option with only 4 Clicks</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/adoption-form-pages.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4>Error Available Pets Section</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/error-av-pets.png">
+            </div>
+            <div class="col-lg-6">
+                <H4>New Organized Available Pets Section</H4>
+                <P></P>
+                <IMG class="cs-img" SRC="images/cpr/design-solution.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="">
+        <h4 class="h4-div-bar">Future Steps</h4>
+    </div>
+    <div class="container">
+        <ul>
+            <li>Add an interactive Events Calendar</li>
+            <li>Build out bio pages for each adoptable animal</li>
+            <li>Create email confirmation once adoption form is filled out</li>
+            <li>Design fully functioning donation page with payment system built in</li>
+            <li>Build out FAQ and Resources pages</li>
+            <li>Design the rest of the mobile responsive pages</li>
+        </ul>
+    </div>
+
+
+
 
 
     <div class="container">
