--- a/uwh.html
+++ b/uwh.html
@@ -34,12 +34,14 @@
   <!--Hero Image-->
   <div class="container-fluid herobg">
     <div class="container">
-      <img class="img-fluid" alt="Responsive image" src="images/uwh-hero-image.png">
+      <img class="img-fluid" alt="Responsive image" src="images/uwh-hero-img-gray.png">
     </div>
   </div>
 
   <div class="jumbotron  jumbotron-fluid uwh">
     <div class="container color-white">
+      <div class="row">
+        <div class="col-lg-8">
       <h2 class="h2-intro">Project Introduction</h2>
       <p class="p-intro">The Chicago Underwater Hockey is a non-profit organization that promotes inclusion and
         diversity in a healthy and social environment. Underwater hockey is a co-ed sport, with players aged 12 to 82.
@@ -48,6 +50,8 @@
         acquire new members and increase members retention to keep this 62-year old club alive. The goal with this
         website redesign is to bring awareness to the little-known sport and to encourage Chicago residents to give it a
         try. So, let’s dive in!</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -75,16 +79,16 @@
     <div class="container projectoverview">
       <h2>Project Overview</h2>
       <div class="row">
-        <div class="col p-overview-number"><img src="images/4 to 18.png"></br>
+        <div class="col p-overview-number"><img src="images/4 to 18-dark.png"></br>
           <h5>Pages of Content</h5>
         </div>
-        <div class="col"><img src="images/5.png"></br>
+        <div class="col"><img src="images/5-dark.png"></br>
           <h5>Stakeholder Interviews</h5>
         </div>
-        <div class="col"><img src="images/50.png"></br>
+        <div class="col"><img src="images/50-dark.png"></br>
           <h5>1 Survey with Over 50 Responses</h5>
         </div>
-        <div class="col"><img src="images/3.png"></br>
+        <div class="col"><img src="images/3-dark.png"></br>
           <h5>Responsive Design Interations</h5>
         </div>
       </div>
@@ -187,7 +191,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-2">
-          <img class="step" src="images/STEP 1.png">
+          <img class="step" src="images/">
         </div>
         <div class="col-lg-4">
           <h3 class="h3-case-study">Understanding the User’s </br>
