--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="card-body">
                       <h3 class="card-title">Where Can I Find...?</h3>
                       <p class="card-text">Enhancing the user experience through proper information hierarchy, simplified navigation, and new aesthetic and minimalist responsive web design.</p>
-                      <a href="#" class="secondary-button">Learn More</a>
+                      <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
                     </div>
                   </div>
             </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="view-all">
-            <button class="view-all-button">VIEW ALL CASE STUDIES</button>
+            <a href="mywork.html"><button class="view-all-button">VIEW ALL CASE STUDIES</button></a>
         </div>
     </div>
 
