--- a/skills.html
+++ b/skills.html
@@ -34,6 +34,7 @@
     <div class="jumbotron jumbotron-fluid skillsbg top-con">
         <div class="container hero-container">
             <h1 class="h1-homebio">MY UX/UI SKILLS</h1>
+            <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
                 <div class="col-6">
                 <img class="teamimage img-fluid" src="images/team-work-bw.jpg">
