--- a/aboutme.html
+++ b/aboutme.html
@@ -30,8 +30,7 @@
             </div>
         </header>
     </div>
-    <div class="jumbotron jumbotron-fluid hp-hero">
-        <div class="container hero-container">
+        <div class="container top-con">
             <h1 class="h1-homebio">ABOUT ME</h1>
             <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
@@ -51,7 +50,7 @@
 
             </div>
         </div>
-    </div>
+
 
     <div class="container">
         <h1>MY FAVES!</h1>
