--- a/mywork.html
+++ b/mywork.html
@@ -31,7 +31,7 @@
         </header>
     </div>
 
-    <div class="container con-padding">
+    <div class="container top-con">
         <h1 class="h1-homebio">MY CASE STUDIES</h1>
         <img class="p-bar" src="images/gray-bar.png">
 
@@ -46,7 +46,7 @@
                     <h4>Redesign of the Chicago Pet Rescue Website</h4>
                     <p class="workp">Apply modern UI elements, simplify the application form, and re-organize the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity.  
                     </p>
-                    <a href="#" class="secondary-button">Learn More</a>
+                    <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                         Underwater Hockey Website</h4>
                     <p class="workp">Expanding the website contect to encourage new members to sign up and provide a
                         one-stop-shop with the resources and information that existing members need. </p>
-                        <a href="#" class="secondary-button">Learn More</a>
+                        <a href="uwh.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                         of Education Website</h4>
                     <p class="workp">Enhancing the user experience through proper information hierarchy, simplified
                         navigation, and new aesthetic and minimalist responsive web design. </p>
-                        <a href="#" class="secondary-button">Learn More</a>
+                        <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
