--- a/skills.html
+++ b/skills.html
@@ -31,8 +31,8 @@
     </div>
     <!--  My UX Skills section coded using CSS flex -->
 
-    <div class="jumbotron jumbotron-fluid skillsbg top-con">
-        <div class="container hero-container">
+   
+        <div class="container top-con">
             <h1 class="h1-homebio">MY UX/UI SKILLS</h1>
             <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
@@ -45,7 +45,6 @@
             </div>
             </div>
         </div>
-    </div>
    
  
 
