--- a/uwh.html
+++ b/uwh.html
@@ -31,41 +31,41 @@
         </div>
     </header>
 </div>
+
+<div class="container">
+  <h1 class="h1-homebio">Responsive Web Design</h1>
+  <h4>Chicago Underwater Hockey</h4>
+  <div class="row hero-intro">
+  <div class="col-lg-9">
+   <p class="p-intro">The Chicago Underwater Hockey is a non-profit organization that promotes inclusion and
+    diversity in a healthy and social environment. Underwater hockey is a co-ed sport, with players aged 12 to 82.
+    Because this sport is played in the water, it’s easy on the joints and helps keep people active and healthy.
+    It’s also a great way for people to meet new friends and build relationships. The Chicago UWH team needs to
+    acquire new members and increase members retention to keep this 62-year old club alive. The goal with this
+    website redesign is to bring awareness to the little-known sport and to encourage Chicago residents to give it a
+    try. So, let’s dive in!</p>
+    </div>
+  </div>
+</div>
   <!--Hero Image-->
-  <div class="container-fluid herobg">
-    <div class="container">
-      <img class="img-fluid" alt="Responsive image" src="images/uwh-hero-img-gray.png">
+  <div class="container-fluid">
+    <div class="container intro-img">
+      <img class="img-fluid" alt="Responsive image" src="images/uwh-gray-hero.png">
     </div>
   </div>
 
-  <div class="jumbotron  jumbotron-fluid uwh">
-    <div class="container color-white">
-      <div class="row">
-        <div class="col-lg-8">
-      <h2 class="h2-intro">Project Introduction</h2>
-      <p class="p-intro">The Chicago Underwater Hockey is a non-profit organization that promotes inclusion and
-        diversity in a healthy and social environment. Underwater hockey is a co-ed sport, with players aged 12 to 82.
-        Because this sport is played in the water, it’s easy on the joints and helps keep people active and healthy.
-        It’s also a great way for people to meet new friends and build relationships. The Chicago UWH team needs to
-        acquire new members and increase members retention to keep this 62-year old club alive. The goal with this
-        website redesign is to bring awareness to the little-known sport and to encourage Chicago residents to give it a
-        try. So, let’s dive in!</p>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <div class="container">
     <div class="row">
       <div class="col">
-        <h3>The Problem</h3>
+        <h4>The Problem</h4>
         <img class="problem-image" src="images/Problem-image.png">
         <p>Users were disappointed with the limited amount of content on the website. They expected more in-depth
           information about the sport. They were also frustrated with a number of interface issues that made the webiste
           confusive and unsuable.</p>
       </div>
       <div class="col">
-        <h3>The Outcome</h3>
+        <h4>The Outcome</h4>
         <img class="outcome-image" src="images/uwh-outcome.png">
         <p>Expanded the website content and redesigned the interface to encourage new members to sign up and provide a
           one-stop-shop with the resources and information that new and existing members need to accomplish their goals.
