--- a/contact.html
+++ b/contact.html
@@ -2,105 +2,109 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.html/style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css.html/style.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 
 <body>
   <div class="container">
     <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-        <div id="navmenu">
-            <ul class="rightalignnavigation">
-                <a href="/aboutme.html">
-                    <li class="menuitems">About</li>
-                </a>
-                <a href="/skills.html">
-                    <li class="menuitems">Skills</li>
-                </a>
-                <a href="mywork.html">
-                    <li class="menuitems">Work</li>
-                </a>
-                <a href="/contact.html">
-                    <li class="menuitems">Contact</li>
-                </a>
-            </ul>
-        </div>
+      <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
+      <div id="navmenu">
+        <ul class="rightalignnavigation">
+          <a href="/aboutme.html">
+            <li class="menuitems">About</li>
+          </a>
+          <a href="/skills.html">
+            <li class="menuitems">Skills</li>
+          </a>
+          <a href="mywork.html">
+            <li class="menuitems">Work</li>
+          </a>
+          <a href="/contact.html">
+            <li class="menuitems">Contact</li>
+          </a>
+        </ul>
+      </div>
     </header>
-</div>
-<div class="container  top-con">
-    <h1 class="h1-homebio">Contact Bea</h1>
+  </div>
+
+  <div class="container  top-con">
+    <h1 class="h1-homebio">CONTACT BEA</h1>
     <img class="p-bar" src="images/gray-bar.png">
-      <form class="row g-3 contact-bea">
-        <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Name</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
-          </div>
-          <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Last Name</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Last Name">
-          </div>
-        </br>
-        <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-        </div>
-        
-        <div class="col-md-6">
-          <label for="inputCity" class="form-label">City</label>
-          <input type="text" class="form-control" id="inputCity" placeholder="City">
-        </div>
-    </br>
-        <div class="col-md-6">
-          <label for="inputState" class="form-label">State</label>
-          <input type="text" class="form-control" id="inputState" placeholder="State">
-        
-          </select>
-        </div>
-        <div class="col-md-4">
-          <label for="inputZip" class="form-label">Zip</label>
-          <input type="text" class="form-control" id="inputZip" placeholder="Zip">
-        </div>
-    </br>
 
-    <div class="col-12">
-      <label for="exampleFormControlTextarea1" class="form-label">Question or Comment</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-        <div class="col-12">
-          <button class="secondary-button">SEND</button>
-        </div>
-      </form>
-</div>
+    <form class="row g-3 contact-bea">
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">Name</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
+      </div>
+      <div class="col-md-6">
+        <label for="inputPassword4" class="form-label">Last Name</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Last Name">
+      </div>
+      </br>
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      </div>
+
+      <div class="col-md-6">
+        <label for="inputCity" class="form-label">City</label>
+        <input type="text" class="form-control" id="inputCity" placeholder="City">
+      </div>
+      </br>
+      <div class="col-md-6">
+        <label for="inputState" class="form-label">State</label>
+        <input type="text" class="form-control" id="inputState" placeholder="State">
+
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label for="inputZip" class="form-label">Zip</label>
+        <input type="text" class="form-control" id="inputZip" placeholder="Zip">
+      </div>
+      </br>
+
+      <div class="col-12">
+        <label for="exampleFormControlTextarea1" class="form-label">Question or Comment</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="col-12">
+        <button class="secondary-button">SEND</button>
+      </div>
+    </form>
+  </div>
 
 
-<div class="container">
-  <nav class="navbar justify-content-end">
-    <a class="navbar" href="index.html">
-      <img src="images/Top.png" alt="">
-    </a>
-  </nav>
-  <nav class="navbar">
-    <nav class="navbar-brand">
-    <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-    </nav>
+  <div class="container">
     <nav class="navbar justify-content-end">
-      <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
-      <a class="nav-link" href="#"><img src="images/fb.png"></a>
-      <a class="nav-link" href="#"><img src="images/insta.png"></a>
-      <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+      <a class="navbar" href="index.html">
+        <img src="images/Top.png" alt="">
+      </a>
     </nav>
-  </nav>
-</div>
+    <nav class="navbar">
+      <nav class="navbar-brand">
+        <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+      </nav>
+      <nav class="navbar justify-content-end">
+        <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
+        <a class="nav-link" href="#"><img src="images/fb.png"></a>
+        <a class="nav-link" href="#"><img src="images/insta.png"></a>
+        <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+      </nav>
+    </nav>
+  </div>
 
- 
+
 
   <script src="js/index.js"></script>
+
 </body>
 
 </html>
