--- a/edu-responsive-redesign.html
+++ b/edu-responsive-redesign.html
@@ -34,7 +34,7 @@
     <div class="container hero-container">
         <h1 class="h1-homebio">Responsive Web Design</h1>
         <h4>US DEPARTMENT OF EDUCATION</h4>
-        <div class="row">
+        <div class="row hero-intro">
             <div class="col-lg-9">
                 <p>When navigating the US Department of Education website users encountered frustration with the
                     overwhelming amount of disorganized information and visual clutter. They struggled to navigate the
@@ -325,7 +325,7 @@
 
          <!--Hero Carousel-->
 
- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+ <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
