rename css folder
used to say css.html/style.css

--- a/edu-responsive-redesign.html
+++ b/edu-responsive-redesign.html
@@ -452,12 +452,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
+                <h4>Testing Notes</h4>
+            </div>
+            <div class="col-lg-8">
+                <img class="img-fluid" src="images/us-edu/usability-testing-notes 1.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
                 <h4>Testing</h4>
                 <img class="img-fluid" src="images/us-edu/user-testing-2.jpg">
-            </div>
-            <div class="col-lg-4">
-                <h4>Testing Notes</h4>
-                <img class="img-fluid" src="images/us-edu/usability-testing-notes 1.png">
             </div>
             <div class="col-lg-4">
                 <h4>Key Findings</h4>
