--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.html/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 
@@ -71,12 +71,8 @@
     </div>
 
 
-    <div class="container">
-        <nav class="navbar justify-content-end">
-          <a class="navbar" href="#">
-            <img src="images/Top.png" alt="">
-          </a>
-        </nav>
+    <div class="container footer-con">
+        
         <nav class="navbar">
           <nav class="navbar-brand">
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
