--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <link rel="stylesheet" href="css.html/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="container">
-        <img lass="img-fluid"src="images/cpr/hero-cpr-redesign.png">
+        <img class="img-fluid"src="images/cpr/hero-cpr-redesign.png">
     </div>
 
 
@@ -113,7 +113,7 @@
 
     </div>
 
-    <div class="container">
+    <div class="container con-padding">
         <div class="row">
             <div class="col-lg-6">
                 <H4>Project scope & Timeline</H4>
@@ -209,7 +209,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container con-padding">
         <div class="row">
             <div class="col-lg-6">
                 <H4>Competitive Analysis</H4>
@@ -243,7 +243,7 @@
                 <IMG class="cs-img" SRC="images/cpr/user-flow.png">
             </div>
         </div>
-        <h4>Proposed changes based on user’s feedback and website evaluation:</h4>
+        <h4 class="con-padding">Proposed changes based on user’s feedback and website evaluation:</h4>
         <div class="row">
             <div class="col-lg-6">
                 <ul>
@@ -334,7 +334,7 @@
             </div>
         </div>
 
-        <h4>User Suggested Changes</h4>
+        <h4 class="con-padding">User Suggested Changes</h4>
         <div class="row">
             <div class="col-lg-6">
                 <ul>
@@ -391,7 +391,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <H4>Old Long Adoption Application Form with 8 Scrolls</H4>
+                <H4>Extra Long Adoption Application Form with 8 Scrolls</H4>
                 <P></P>
                 <IMG class="a-form-img" SRC="images/cpr/long-application.png">
             </div>
@@ -440,7 +440,7 @@
     <div class="container">
         <nav class="navbar justify-content-end">
             <a class="navbar" href="index.html">
-                <img src="images/Top.png" alt="">
+                <img src="images/Top Arrow.png" alt="">
             </a>
         </nav>
         <nav class="navbar">
