--- a/mywork.html
+++ b/mywork.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css.html/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 
@@ -44,7 +44,9 @@
             <div class="col">
                 <div id="pwork1">
                     <h4>Redesign of the Chicago Pet Rescue Website</h4>
-                    <p class="workp">Apply modern UI elements, simplify the application form, and re-organize the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity.  
+                    <p class="workp">Applied modern UI elements, simplified the application form, and re-organized the
+                        navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while
+                        maintaining most of the original site composition and content integrity.
                     </p>
                     <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
                 </div>
@@ -53,10 +55,9 @@
 
 
         <div class="row">
-
             <div class="col">
                 <div id="imagework1">
-                    <img class="workimage" src="images/uwh-responsive-design.png">
+                    <img class="workimage" src="images/uwh/uwh-responsive-design.png">
                 </div>
             </div>
             <div class="col">
@@ -65,7 +66,7 @@
                         Underwater Hockey Website</h4>
                     <p class="workp">Expanding the website contect to encourage new members to sign up and provide a
                         one-stop-shop with the resources and information that existing members need. </p>
-                        <a href="uwh.html" class="secondary-button">Learn More</a>
+                    <a href="uwh.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
@@ -83,7 +84,7 @@
                         of Education Website</h4>
                     <p class="workp">Enhancing the user experience through proper information hierarchy, simplified
                         navigation, and new aesthetic and minimalist responsive web design. </p>
-                        <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
+                    <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
                 </div>
             </div>
         </div>
