--- a/uwh.html
+++ b/uwh.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header id="headergrid">
-      <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
+      <a href="index.html"><img id="logo" src="images/b-icon.png"></a>
       <div id="navmenu">
         <ul class="rightalignnavigation">
           <a href="/aboutme.html">
