--- a/edu-responsive-redesign.html
+++ b/edu-responsive-redesign.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
+            <a href="index.html"><img id="logo" src="images/b-logo.png"></a>
             <div id="navmenu">
                 <ul class="rightalignnavigation">
                     <a href="/aboutme.html">
@@ -603,7 +603,7 @@
         </nav>
         <nav class="navbar">
             <nav class="navbar-brand">
-                <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
+                <a class="navbar-brand" href=""><img id="logo" src=""></a>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
