--- a/index.html
+++ b/index.html
@@ -8,45 +8,37 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+
   <div class="container">
-    <header id="headergrid">
-      <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-      <div id="navmenu">
-        <ul class="rightalignnavigation">
-          <a href="/aboutme.html">
-            <li class="menuitems">About</li>
-          </a>
-          <a href="/skills.html">
-            <li class="menuitems">Skills</li>
-          </a>
-          <a href="mywork.html">
-            <li class="menuitems">Work</li>
-          </a>
-          <a href="/contact.html">
-            <li class="menuitems">Contact</li>
-          </a>
-        </ul>
-      </div>
-    </header>
+    <nav class="navbar  navbar-light ">
+      <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+      <nav class="nav bar justify-content-end ">   
+      <a class="nav-link" href="aboutme.html">About</a>
+          <a class="nav-link" href="skills.html">Skills</a>
+          <a class="nav-link" href="mywork.html">Work</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </nav> 
+        </nav>
   </div>
+  
 
   <div class="jumbotron jumbotron-fluid hp-hero">
     <div class="container hero-container">
-      <h4>Hi, I'm Bea Harnois-</h4>
-      <h1 class="h1-homebio">An UX/UI practitioner inspired by user-centered design. </h1>
       <div class="row">
         <div class="col-lg-4">
           <img class="profileimage img-fluid" src="images/bea-harnois-round-profile.png">
         </div>
         <div class="col-lg-8 bio-bg">
+
+          <h3>Hi, I'm Bea-</h3>
+          <h5 class="shortbio"> UX/UI de•sign•er [dəˈzīnər] n.</h5>
+          <h5 class="shortbio">A person who devises and executes the form and function of an interface inspired by
+            user-centered design.</h5>
           <p class="shortbio">
             Driven by human needs, I collaborate with teams to make evidence-based and research-informed design
             decisions that target complex usability problems and deliver intuitive solutions with engaging user
             experiences.
           </p>
-          <h2 class="h2-resume">Take a look at My Resume!</h2>
-          <button class="primary-button">MY RESUME</button>
 
 
         </div>
@@ -55,24 +47,27 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  
     <div class="container">
       <h1 class="h1-case">Case Studies</h1>
       <img class="p-bar" src="images/gray-bar.png">
     </div>
-  </div>
+
   <div class="container top-con">
-    <div class="row">
+    <div class="row space-b">
       <div class="col-lg-4">
-              <h4>Redesign of the Chicago Pet Rescue Website</h4>
-              <p>Applied modern UI elements, simplified the application form, and re-organized the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity.  
-              </p>
-              <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
+        <h3 class="card-title">Redesign of the Chicago Pet Rescue Website</h3>
+        <p>Applied modern UI elements, simplified the application form, and re-organized the navigation to enhance the
+          usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity.
+        </p>
+        <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
       </div>
       <div class="col-lg-8">
         <img class="img-fluid" src="images/cpr/hero-cpr-redesign-cropped.png">
       </div>
+    </div>
   </div>
+  <div class="container">
     <div class="row">
       <div class="col-lg-6">
         <div class="card" style="width: 30em;">
@@ -91,7 +86,8 @@
           <img src="images/edu-responsive-web-design.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h3 class="card-title">Where Can I Find...?</h3>
-            <p class="card-text">Enhancing the user experience through proper information hierarchy, simplified navigation, and new aesthetic and minimalist responsive web design.</p>
+            <p class="card-text">Enhancing the user experience through proper information hierarchy, simplified
+              navigation, and new aesthetic and minimalist responsive web design.</p>
             <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
           </div>
         </div>
@@ -131,10 +127,10 @@
 
 
   <div class="container footer-con">
-    
+
     <nav class="navbar">
       <nav class="navbar-brand">
-        <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
+        <a class="navbar-brand" href=""><img id="logo" src=""></a>
         <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
         <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
@@ -153,16 +149,16 @@
 
   <script src="js/index.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-crossorigin="anonymous"></script>
-<script src="js/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
