--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -143,12 +143,12 @@
             <div class="col-lg-6">
                 <H4>STORY LINE</H4>
                 <P></P>
-                <IMG class="cs-img" SRC="IMAGES/cpr/story-line.png">
+                <img class="cs-img" src="images/cpr/story-line.png">
             </div>
             <div class="col-lg-6">
                 <H4>USER PERSONA</H4>
                 <P></P>
-                <IMG class="cs-img" SRC="IMAGES/cpr/user-persona.png">
+                <img class="cs-img" src="images/cpr/user-persona.png">
             </div>
         </div>
     </div>
