--- a/aboutme.html
+++ b/aboutme.html
@@ -10,39 +10,29 @@
 
 <body>
     <div class="container">
-        <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-            <div id="navmenu">
-                <ul class="rightalignnavigation">
-                    <a href="/aboutme.html">
-                        <li class="menuitems">About</li>
-                    </a>
-                    <a href="/skills.html">
-                        <li class="menuitems">Skills</li>
-                    </a>
-                    <a href="mywork.html">
-                        <li class="menuitems">Work</li>
-                    </a>
-                    <a href="/contact.html">
-                        <li class="menuitems">Contact</li>
-                    </a>
-                </ul>
-            </div>
-        </header>
-    </div>
+        <nav class="navbar  navbar-light ">
+          <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+          <nav class="nav bar justify-content-end ">   
+          <a class="nav-link" href="aboutme.html">About</a>
+              <a class="nav-link" href="skills.html">Skills</a>
+              <a class="nav-link" href="mywork.html">Work</a>
+              <a class="nav-link" href="contact.html">Contact</a>
+            </nav> 
+            </nav>
+      </div>
+    
         <div class="container top-con">
             <h1 class="h1-homebio">ABOUT ME</h1>
             <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-5">
                     <img class="profileimage img-fluid" src="images/bea-google-cropped.jpg">
                 </div>
-                <div class="col">
+                <div class="col-lg-7">
                     <h2>A Citizen of the world!</h2>
                     <p class="shortbio">
-                        Born in Dominican Republic, raised in Puerto Rico, living in Chicago- I am fluent in Spanish and English. I love visiting other countries and learning their cultures. I am a formally trained accountant with a passion for beautiful, functional and purposeful design.
-                    </p>
-                    <button class="primary-button">MY RESUME</button>
+                    Beatriz Chalas Harnois- born in Dominican Republic, raised in Puerto Rico, living in Chicago- I am fluent in Spanish and English. I am a formally trained accountant and entreprenuer with a passion for art and beautiful, functional and purposeful design. After years of running businesses, I want to be more involved in the creative process of interfaces that impact the lives of the end users. 
+                    </p><button class="primary-button">MY RESUME</button>
 
 
                 </div>
@@ -52,7 +42,7 @@
         </div>
 
 
-    <div class="container">
+    <div class="container top-con">
         <h1>MY FAVES!</h1>
         <img class="p-bar" src="images/gray-bar.png">
         <H4>My daughter, dogs, matcha, yoga, nature, travelling the world, and doing Kareoke once in a while.
@@ -75,13 +65,13 @@
         
         <nav class="navbar">
           <nav class="navbar-brand">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+            <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
+            <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
+            <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
+            <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
           </nav>
           <nav class="navbar justify-content-end">
-            <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+            <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
             <a class="nav-link" href="#"><img src="images/fb.png"></a>
             <a class="nav-link" href="#"><img src="images/insta.png"></a>
             <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
