--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
+<body>
 
   <div class="container">
     <nav class="navbar  navbar-light ">
@@ -30,8 +31,8 @@
         </div>
         <div class="col-lg-8 bio-bg">
 
-          <h3>Hi, I'm Bea-</h3>
-          <h5 class="shortbio"> UX/UI de•sign•er [dəˈzīnər] n.</h5>
+          <h3>Hi, I'm Bea!</h3>
+          <h5 class="shortbio"> UX/UI de•sign•er [dəˈzīnər] noun.</h5>
           <h5 class="shortbio">A person who devises and executes the form and function of an interface inspired by
             user-centered design.</h5>
           <p class="shortbio">
