--- a/skills.html
+++ b/skills.html
@@ -9,26 +9,17 @@
 
 <body>
     <div class="container">
-        <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-            <div id="navmenu">
-                <ul class="rightalignnavigation">
-                    <a href="/aboutme.html">
-                        <li class="menuitems">About</li>
-                    </a>
-                    <a href="/skills.html">
-                        <li class="menuitems">Skills</li>
-                    </a>
-                    <a href="mywork.html">
-                        <li class="menuitems">Work</li>
-                    </a>
-                    <a href="/contact.html">
-                        <li class="menuitems">Contact</li>
-                    </a>
-                </ul>
-            </div>
-        </header>
-    </div>
+        <nav class="navbar  navbar-light ">
+          <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+          <nav class="nav bar justify-content-end ">   
+          <a class="nav-link" href="aboutme.html">About</a>
+              <a class="nav-link" href="skills.html">Skills</a>
+              <a class="nav-link" href="mywork.html">Work</a>
+              <a class="nav-link" href="contact.html">Contact</a>
+            </nav> 
+            </nav>
+      </div>
+    
     <!--  My UX Skills section coded using CSS flex -->
 
    
@@ -41,14 +32,14 @@
             </div>
 
             <div class="col-6 skillsbg">
-                    <h2 class="hskill">“I love working in teams and learning from others. It makes the job more fun and fullfilling.”</h2>
+                    <h2 class="hskill">“I love working in teams and learning from others. It makes the job more fun and fullfilling.”- Bea</h2>
             </div>
             </div>
         </div>
    
  
 
-        <div class="container con-padding">
+        <div class="container top-con">
             <div class="row">
                 <div class="col-lg-4">
                     <img class="skillimage" src="images/user-research.png">
@@ -99,13 +90,13 @@
            
             <nav class="navbar">
               <nav class="navbar-brand">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
+                <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
+                <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
+                <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
               </nav>
               <nav class="navbar justify-content-end">
-                <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+                <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
                 <a class="nav-link" href="#"><img src="images/fb.png"></a>
                 <a class="nav-link" href="#"><img src="images/insta.png"></a>
                 <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
