--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,17 @@
 
 <body>
   <div class="container">
-    <header id="headergrid">
-      <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-      <div id="navmenu">
-        <ul class="rightalignnavigation">
-          <a href="/aboutme.html">
-            <li class="menuitems">About</li>
-          </a>
-          <a href="/skills.html">
-            <li class="menuitems">Skills</li>
-          </a>
-          <a href="mywork.html">
-            <li class="menuitems">Work</li>
-          </a>
-          <a href="/contact.html">
-            <li class="menuitems">Contact</li>
-          </a>
-        </ul>
-      </div>
-    </header>
+    <nav class="navbar  navbar-light ">
+      <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+      <nav class="nav bar justify-content-end ">   
+      <a class="nav-link" href="aboutme.html">About</a>
+          <a class="nav-link" href="skills.html">Skills</a>
+          <a class="nav-link" href="mywork.html">Work</a>
+          <a class="nav-link" href="contact.html">Contact</a>
+        </nav> 
+        </nav>
   </div>
+
 
   <div class="container  top-con">
     <h1 class="h1-homebio">CONTACT BEA</h1>
@@ -82,11 +73,10 @@
   
     <nav class="navbar">
       <nav class="navbar-brand">
-        <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+        <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
+        <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
+        <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
+        <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
       </nav>
       <nav class="navbar justify-content-end">
         <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
