--- a/mywork.html
+++ b/mywork.html
@@ -10,27 +10,17 @@
 
 <body>
     <div class="container">
-        <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
-            <div id="navmenu">
-                <ul class="rightalignnavigation">
-                    <a href="/aboutme.html">
-                        <li class="menuitems">About</li>
-                    </a>
-                    <a href="/skills.html">
-                        <li class="menuitems">Skills</li>
-                    </a>
-                    <a href="mywork.html">
-                        <li class="menuitems">Work</li>
-                    </a>
-                    <a href="/contact.html">
-                        <li class="menuitems">Contact</li>
-                    </a>
-                </ul>
-            </div>
-        </header>
-    </div>
-
+        <nav class="navbar  navbar-light ">
+          <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+          <nav class="nav bar justify-content-end ">   
+              <a class="nav-link" href="aboutme.html">About</a>
+              <a class="nav-link" href="skills.html">Skills</a>
+              <a class="nav-link" href="mywork.html">Work</a>
+              <a class="nav-link" href="contact.html">Contact</a>
+            </nav> 
+            </nav>
+      </div>
+    
     <div class="container top-con">
         <h1 class="h1-homebio">MY CASE STUDIES</h1>
         <img class="p-bar" src="images/gray-bar.png">
@@ -139,37 +129,24 @@
 
     </section>
 
-    <footer id="footergrid">
+    <div class="container footer-con">
+        
+        <nav class="navbar">
+          <nav class="navbar-brand">
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+          </nav>
+          <nav class="navbar justify-content-end">
+            <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
+            <a class="nav-link" href="#"><img src="images/fb.png"></a>
+            <a class="nav-link" href="#"><img src="images/insta.png"></a>
+            <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+          </nav>
+        </nav>
+      </div>
 
-        <div id="footernavmenu">
-
-            <ul>
-                <a href="/aboutme.html">
-                    <li class="footermenuitems">About</li>
-                </a>
-                <a href="/skills.html">
-                    <li class="footermenuitems">Skills</li>
-                </a>
-                <a href="mywork.html">
-                    <li class="footermenuitems">Work</li>
-                </a>
-                <a href="/contact.html">
-                    <li class="footermenuitems">Contact</li>
-                </a>
-            </ul>
-        </div>
-        <div id="socialicons">
-
-            <ul>
-                <li class="socialitems">
-                    <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
-                </li>
-                <li class="socialitems"><img src="images/fb-dark.png"></li>
-                <li class="socialitems"><img src="images/insta-dark.png"></li>
-                <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
-            </ul>
-        </div>
-    </footer>
 
     <script src="js/index.js"></script>
 </body>
