--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
     <!--  My UX Skills section coded using CSS flex -->
 
    
-        <div class="container top-con">
+        <div class="container ">
             <h1 class="h1-homebio">MY UX/UI SKILLS</h1>
             <img class="p-bar" src="images/gray-bar.png">
             <div class="row">
